k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: front-end-deployment
  template:
    metadata:
      labels:
        app: front-end-deployment
    spec: 
      affinity: 
        # nodeAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #     nodeSelectorTerms:
        #     - matchExpressions:
        #       - key: kubernetes.io/hostname
        #         operator: In
        #         values: 
        #         - minikube-m02
        # podAffinity: 
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #   - labelSelector: 
        #       matchExpressions:
        #       - key: app
        #         operator: In
        #         values:
        #         - back-end-deployment
        #     topologyKey: topology.kubernetes.io/zone
      tolerations:
        - key: "type"
          operator: "Exists"
          effect: "NoSchedule"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector: 
          matchLabels:
            app: front-end-deployment
      containers:
      - name: front-end-deployment
        image: registry.gitlab.com/afrikpay1/gulfcam-angular:k8s-3
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name : front-end-port
      imagePullSecrets: 
      - name: front-end-docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  selector:
    app: front-end-deployment
  ports:
  - port: 80
    targetPort: front-end-port
    nodePort: 30003
